Fix: z-index of navbar.

--- a/frontend/src/stylesheet/basic/basic_main/UserImages.scss
+++ b/frontend/src/stylesheet/basic/basic_main/UserImages.scss
@@ -45,7 +45,7 @@
   .navigation-bar {
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 3;
     background-color: $background-color-darker;
     width: 100%;
     height: 50px;
@@ -258,7 +258,7 @@
   min-width: fit-content;
   white-space: nowrap;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 2;
+  //z-index: 2;
   border-radius: 0 0 20px 20px;
 }
 
